# bogc

./: LICENSE  README.md  pyproject.toml
bogc/: __main__.py  data_loading.py  model.py  plotting.py  snapshots.py  training.py
bogc/experiments/: __init__.py  cross_validation.py  final_model.py  model_optimization.py  parameter_optimization.py  training_test_split.py
bogc/experiments/model_evaluation/: __init__.py  optimize_targets.py  plot_simulation.py  select_optima.py  simulate_targets.py
